# magickwand.js

./: .eslintrc.json  .gitignore  .gitmodules  .mocharc.json  .npmignore  CHANGELOG.md  CMakeCache.txt  CNAME  ImageMagickConfig.cmake  LICENSE  Magick++.d.ts  Makefile  README.md  README.xPacks.md  arguments.gypi  binding.gyp  build_magick.bat  build_magick.sh  build_magick_wasm.sh  builtins.gypi  cmake_install.cmake  conan-xpack.profile  conan.profile  conanfile.py  conanfile.txt  configure_magick.bat  configure_magick.sh  configure_magick_wasm.sh  current_native.ini  deps-stub  emscripten.profile  eslint.config.mjs  example.mjs  magickcore.i  magickwand-js.cjs  magickwand-js.cxx  magickwand-js_01.cxx  magickwand-js_02.cxx  magickwand-js_03.cxx  magickwand-js_04.cxx  (+270 more)
.github/: dependabot.yml
.github/workflows/: build.yml  lock.yml  post-publish.yml  publish.yml  swig.yml  test-dev.yml  test-package.yml  test-release.yml  website.yml  windows.yml
Magick++/: Magick++-config  Magick++.cmake  Magick++.pc  Makefile  cmake_install.cmake
MagickCore/: ImageMagick.pc  MagickCore.pc  Makefile  cmake_install.cmake  magick-baseconfig.h  version.h
MagickWand/: MagickWand.cmake  MagickWand.pc  Makefile  cmake_install.cmake
config/: ImageMagick.rdf  Magick++.dox  MagickCore.dox  MagickWand.dox  Makefile  cmake_install.cmake  config.h  configure.xml  delegates.xml  type-urw-base35.xml  type.xml
emscripten/: common.gypi
example/: example.mjs
example/browser/demo/: index.html  index.js  index.ts  tsconfig.json  webpack.config.js
example/browser/webpack/: .gitignore  index.html  index.js  webpack.config.js
hadron/: clang-darwin.profile  clang-linux.ini  clang-linux.profile  clang-win32.ini  clang-win32.profile  cli-options.cjs  conan.ini  default-darwin.profile  default-linux.profile  default-win32.profile  emscripten.ini  emscripten.profile  gcc-darwin.ini  gcc-linux.ini  gcc-win32.ini  hadron-download-headers.mjs  hadron-download-headers.ts  ninja-xpack-toolchain.cmake  system-darwin.profile  system-linux.profile  system-win32.ini  system-win32.profile
lib/: Magick++.d.ts  index.cjs  index.d.ts  index.js  index.mjs  index.native.js  index.native.mjs  index.wasm.js
lib/wasm/: index.cjs  index.d.ts  index.js
native/: index.cjs  index.d.ts
profiles/: clang-darwin.profile  clang-linux.profile
scripts/: cli.cjs  deps-download.js  gen-es6.js  install.mjs  publish-generated.js  publish-packages.mjs  true-false.js
src/: AsyncClasses.i  Blob.i  CoderInfo.i  Drawable.i  Image.i  ImplicitCasting.i  Magick++.i  Magick++_wrap.cxx  MagickCore.i  STL.i  StorageType.i  SyncClasses.i  deps-stub.cc  deps.js  imagemagick-core.i  magick_config.h  magickwand.i  pre.js
src/MagickCore/: magick-baseconfig.h  version.h
test/: .mocharc.json  .mocharc.security.json  Blob.shared.ts  Blob.test.js  Blob.test.ts  CoderInfo.node.ts  CoderInfo.test.js  CoderInfo.test.ts  Color.shared.ts  Color.test.ts  Core.node.ts  Core.test.ts  Draw.node.ts  Draw.test.js  Draw.test.ts  Geometry.shared.ts  Geometry.test.ts  Image.shared.ts  Image.test.js  Image.test.ts  Main.browser.ts  Makefile  Pixels.test.js  STL.node.ts  STL.test.js  STL.test.ts  Security.ts  alias.js  browser.test.ts  cjs.standalone.cjs  cjs.test.cjs  es6.standalone.mjs  es6.test.mjs  integration.test.ts  karma.conf.js  mocha-hooks.ts  napi-leaks-suppression.txt  native.ts  node.test.ts  package.json  (+5 more)
test/browser/webpack/: index.html  index.js  webpack.config.js
test/integration/: .gitignore  README.md  browser-react-ts.karma.cjs  browser-rollup-esm.karma.cjs  browser-vite-esm.karma.cjs  browser-vite-ts.karma.cjs  browser-webpack-esm.karma.cjs  browser-webpack-ts-cjs.karma.cjs  browser-webpack-ts-esm.karma.cjs
test/integration/browser-react-ts/: config-overrides.js  package.json
test/integration/browser-react-ts/src/: index.tsx
test/integration/browser-rollup-esm/: index.js  package.json  rollup.config.cjs  test.js
test/integration/browser-vite-esm/: package.json
test/integration/browser-vite-esm/src/: main.js
test/integration/browser-vite-ts/: package.json  vite.config.js
test/integration/browser-vite-ts/src/: main.ts
test/integration/browser-webpack-esm/: .gitignore  index.js  package.json  tsconfig.json  webpack.config.cjs  webpack.config.js
test/integration/browser-webpack-ts-cjs/: index.ts  package.json  tsconfig.json  webpack.config.js
test/integration/browser-webpack-ts-esm/: .gitignore  index.ts  package.json  tsconfig.json  webpack.config.cjs
test/integration/node-cjs/: index.cjs  package.json
test/integration/node-config-rebuild/: .npmrc  README.md  package.json
test/integration/node-esm/: index.mjs  package.json
test/integration/node-ts/: index.ts  package.json  tsconfig.json
test/integration/node-ts-cjs/: index.ts  package.json
test/integration/node-ts-esm/: index.ts  package.json  tsconfig.json
utilities/: Makefile  cmake_install.cmake
wasm/: Magick++.d.ts  common.gypi  index.cjs  index.d.ts  index.js
